# sdl-chess

./: .gitignore  CMakeLists.txt  README.md
src/: Aliases.h  Application.cpp  Application.h  Board.cpp  Board.h  BoardDrawer.cpp  BoardDrawer.h  Colors.cpp  Colors.h  Constants.h  DrawColor.h  GameLogic.cpp  GameLogic.h  KingCastleLogic.cpp  KingCastleLogic.h  KingCheckLogic.cpp  KingCheckLogic.h  KingMateLogic.cpp  KingMateLogic.h  Move.h  MoveValidator.cpp  MoveValidator.h  PawnMovementLogic.cpp  PawnMovementLogic.h  Piece.cpp  Piece.h  PieceArrangement.h  PieceType.h  PositionConversions.cpp  PositionConversions.h  PromotionOperations.cpp  PromotionOperations.h  Renderer.cpp  Renderer.h  TextureTable.cpp  TextureTable.h  Tile.cpp  Tile.h  TileColor.cpp  TileColor.h  (+5 more)
